# CNM-Final-Project

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: alerts.py  analytics.py  auth.py  health.py  sessions.py  settings.py  users.py
backend/app/api/ws/: live.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/schemas/: auth.py  schemas.py  users.py
backend/app/services/: kafka_consumer.py  ws_broadcaster.py
backend/tests/: test_alert_rules.py  test_auth.py
docs/: api.md  architecture.md  runbook.md
docs/diagrams/: class.mmd  erd.mmd  usecase.mmd
frontend/: index.html  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: auth.ts  endpoints.ts  http.ts  ws.ts
frontend/src/app/: App.tsx
frontend/src/pages/: AdminSettingsPage.tsx  AdminUsersPage.tsx  AlertsPage.tsx  AnalyticsPage.tsx  LiveMonitorPage.tsx  LoginPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx
frontend/src/stores/: liveMonitorStore.ts
frontend/src/styles/: global.css
frontend/src/types/: domain.ts  ws.ts
infra/kafka/: create-topics.sh
infra/postgres/: init.sql
services/alert-engine-service/: Dockerfile  pyproject.toml
services/common/: pyproject.toml
services/common/src/: config.py  kafka.py  (+1 more)
services/inference-service/: Dockerfile  pyproject.toml
services/preprocess-buffer-service/: Dockerfile  pyproject.toml
services/replay-producer/: Dockerfile  pyproject.toml
(+23 files in other folders)
